force-app/main/default/objects/NCMT_Work_Description__c/NCMT_Work_Description__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_CEW_Help_Launcher</customHelpPage>
    <label>NCMT CEW Work Description</label>
    <nameField>
        <displayFormat>WD-{000}</displayFormat>
        <label>Work Description Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Work Descriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>