force-app/main/default/objects/NCMT_Work_Description__c/fields/CECCA__c.field-meta.xml
<CustomField>
    <fullName>CECCA__c</fullName>
    <formula>Total_Direct_Cost__c * NCMT_Project__r.CECAMultiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CECCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>