force-app/main/default/objects/NCMT_Work_Description__c/fields/CEW_Work_Item_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>CEW_Work_Item_Record_Count__c</fullName>
    <label>CEW Work Item Record Count</label>
    <summaryForeignKey>NCMT_CEW_Work_Item__c.NCMT_CEW_Work_Description__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>