force-app/main/default/objects/NCMT_Work_Description__c/fields/Cost_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Cost_Data_Source__c</fullName>
    <label>Cost Data Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>