force-app/main/default/objects/NCMT_Work_Description__c/fields/ECC__c.field-meta.xml
<CustomField>
    <fullName>ECC__c</fullName>
    <formula>ECCA__c *  NCMT_Project__r.ECCMultiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>