force-app/main/default/objects/NCMT_Work_Description__c/fields/ECC_UNIT__c.field-meta.xml
<CustomField>
    <fullName>ECC_UNIT__c</fullName>
    <formula>if( Unit__c ==0, ECC__c ,  ECC__c/Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECC\Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>