force-app/main/default/objects/NCMT_Work_Description__c/fields/ETPC__c.field-meta.xml
<CustomField>
    <fullName>ETPC__c</fullName>
    <formula>ECC__c*(1 +  NCMT_Project__r.EDRC__c + NCMT_Project__r.EMIC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETPC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>