force-app/main/default/objects/NCMT_Work_Description__c/fields/Impact_EDRC__c.field-meta.xml
<CustomField>
    <fullName>Impact_EDRC__c</fullName>
    <formula>ECC__c *  NCMT_Project__r.EDRC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impact EDRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>