force-app/main/default/objects/NCMT_Work_Description__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Entry Lobby Upgrades/Restoration (Monumental)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Secondary Public Lobbies &amp; Circulation (Non-Monumental)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Restroom Upgrades</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Demolition/Core Shell Prep</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Interior Alterations - Building Core/Shell</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - OA Tenant Fit-out -- from Tenant Agency Sheets (Includes Raised Floor)</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - OA Security/Blast -- from Tenant Agency Sheets</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - RWA-Funded Work - from Tenant Agency Sheets</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 - Special Requirements</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 - New Construction Additions</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 - Building Structure</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 - Building Exterior</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 - Roofing</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 - Conveying System</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 - Plumbing</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16 - HVAC</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17 - Electrical</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18 - Life Safety</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>19 - Hazardous Abatement</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20 - Grounds and Approaches</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>