force-app/main/default/objects/NCMT_Work_Description__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>CASE(Number__c, &quot;1&quot;, &quot;Entry Lobby Upgrades/Restoration (Monumental)&quot;, 
&quot;2&quot;, &quot;Secondary Public Lobbies &amp; Circulation (Non-Monumental)&quot;, 
&quot;3&quot;, &quot;Restroom Upgrades&quot;,
&quot;4&quot;, &quot;Demolition/Core Shell Prep&quot;,
&quot;5&quot;, &quot;Interior Alterations - Building Core/Shell&quot;,
&quot;6&quot;, &quot;OA Tenant Fit-out  -- from Tenant Agency Sheets (Includes Raised Floor)&quot;,
&quot;7&quot;, &quot;OA Security/Blast  -- from Tenant Agency Sheets&quot;,
&quot;8&quot;, &quot;RWA-Funded Work - from Tenant Agency Sheets&quot;,
&quot;9&quot;, &quot;Special Requirements&quot;,
&quot;10&quot;, &quot;New Construction Additions&quot;,
&quot;11&quot;, &quot;Building Structure&quot;,
&quot;12&quot;, &quot;Building Exterior&quot;,
&quot;13&quot;, &quot;Roofing&quot;,
&quot;14&quot;, &quot;Conveying System&quot;,
&quot;15&quot;, &quot;Plumbing&quot;,
&quot;16&quot;, &quot;HVAC&quot;,
&quot;17&quot;, &quot;Electrical&quot;,
&quot;18&quot;, &quot;Life Safety&quot;,
&quot;19&quot;, &quot;Hazardous Abatement&quot;,
&quot;Grounds and Approaches&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>