force-app/main/default/objects/NCMT_Work_Description__c/fields/Total_Direct_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Cost__c</fullName>
    <label>Totals (W/O Markup)</label>
    <summarizedField>NCMT_CEW_Work_Item__c.Total_Direct_Cost__c</summarizedField>
    <summaryForeignKey>NCMT_CEW_Work_Item__c.NCMT_CEW_Work_Description__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>