force-app/main/default/objects/NCMT_Work_Description__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Number__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affected Area - GSF</fullName>
            </value>
            <value>
                <fullName>Area - GSF</fullName>
            </value>
            <value>
                <fullName>Protection Level (I to IV)</fullName>
            </value>
            <value>
                <fullName>No. of Stops</fullName>
            </value>
            <value>
                <fullName>No. of Fixtures</fullName>
            </value>
            <value>
                <fullName>CFM</fullName>
            </value>
            <value>
                <fullName>Tonnage</fullName>
            </value>
            <value>
                <fullName>MBTUH</fullName>
            </value>
            <value>
                <fullName>Amp</fullName>
            </value>
            <value>
                <fullName>USF + Common Area</fullName>
            </value>
            <value>
                <fullName>USF Area</fullName>
            </value>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>GSF Area - New Structure</fullName>
            </value>
            <value>
                <fullName>Superstructure Area</fullName>
            </value>
            <value>
                <fullName>Window Area</fullName>
                <default>true</default>
                <label>Window Area</label>
            </value>
            <value>
                <fullName>Closure Area</fullName>
            </value>
            <value>
                <fullName>Roofing Area</fullName>
            </value>
            <value>
                <fullName>Site Improvement Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>